# Wireless_power_switch_button

./: .gitignore  CMakeLists.txt  LICENSE  README.md  last.toml  partitions.csv  sdkconfig
.github/workflows/: CI.yml  Release.yml
components/app/app_runtime/: CMakeLists.txt  README.md
components/app/battery_level/: CMakeLists.txt  README.md
components/app/battery_voltage/: CMakeLists.txt  README.md
components/app/blackbox_service/: CMakeLists.txt  README.md
components/app/button_input/: CMakeLists.txt
components/app/espnow_remote/: CMakeLists.txt
components/app/espnow_service/: CMakeLists.txt  README.md
components/app/power_manager/: CMakeLists.txt  README.md
components/app/shell_command/: CMakeLists.txt  README.md
components/app/shell_command/include/: shell_command.h
components/app/shell_command/src/: shell_command.cpp
components/app/status_led/: CMakeLists.txt
components/bsp/ADC/: CMakeLists.txt  README.md
components/bsp/HXC_NVS/: CMakeLists.txt  README.md
components/bsp/PWM/: CMakeLists.txt  README.md
components/bsp/Temperature/: CMakeLists.txt  README.md
components/bsp/circular_flash_buffer/: CMakeLists.txt  README.md
components/bsp/shell/: CMakeLists.txt  README.md
components/bsp/wifi_manager/: CMakeLists.txt  README.md
components/common/Interp/: CMakeLists.txt  Interp.hpp  README.md
components/middleware/Button/: Button.cpp  CMakeLists.txt  README.md
components/middleware/espnow_link/: CMakeLists.txt  README.md
components/middleware/espnow_link/include/: espnow_codec.h  espnow_link.h
components/middleware/espnow_link/private_include/: espnow_link_internal.h  espnow_pairing_internal.h  espnow_protocol.h
components/middleware/espnow_link/src/: espnow_link.cpp  espnow_link_api.cpp  espnow_link_task.cpp  espnow_pairing.cpp  espnow_pairing_protocol.cpp  espnow_peer_store.cpp  espnow_protocol.cpp
firmware/v0.1.0/: SHA256SUMS
launchpad/: README.md
launchpad/v0.1.0/: config.toml
main/: CMakeLists.txt  app_main.cpp
scripts/: generate_battery_curve_header.py  post_build.py  process_battery_curve.py
(+43 files in other folders)
